--- a/swiftmk/src/main/AndroidManifest.xml
+++ b/swiftmk/src/main/AndroidManifest.xml
@@ -2,4 +2,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.mozhimen.swiftmk">
 
+    <uses-permission android:name="android.permission.VIBRATE" />
 </manifest>
