--- a/build.gradle
+++ b/build.gradle
@@ -2,8 +2,8 @@
 buildscript {
     ext.kotlin_version = "1.4.32"
     repositories {
-        google()
-        jcenter()
+        maven { url 'https://maven.aliyun.com/repository/jcenter' }
+        maven { url 'https://maven.aliyun.com/repository/google' }
     }
     dependencies {
         classpath "com.android.tools.build:gradle:4.1.3"
@@ -16,8 +16,8 @@ buildscript {
 
 allprojects {
     repositories {
-        google()
-        jcenter()
+        maven { url 'https://maven.aliyun.com/repository/jcenter' }
+        maven { url 'https://maven.aliyun.com/repository/google' }
         maven { url 'https://www.jitpack.io' }
 
     }
