--- a/gradle/wrapper/gradle-wrapper.properties
+++ b/gradle/wrapper/gradle-wrapper.properties
@@ -1,7 +1,6 @@
-#Thu Jul 08 15:36:59 CST 2021
+#Fri Feb 25 13:31:40 CST 2022
 distributionBase=GRADLE_USER_HOME
+distributionUrl=https\://services.gradle.org/distributions/gradle-7.0.2-bin.zip
 distributionPath=wrapper/dists
-zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
-#distributionUrl=https\://services.gradle.org/distributions/gradle-6.5-all.zip
-distributionUrl=https\://downloads.gradle-dn.com/distributions/gradle-6.5-all.zip
+zipStoreBase=GRADLE_USER_HOME
