--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.SwiftMK">
+
         <activity
             android:name=".MainActivity"
             android:exported="true">
@@ -18,17 +19,30 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <!--ComponentMK-->
+
+        <!--Demo-->
+        <activity
+            android:name=".demo.DemoActivity"
+            android:exported="false" />
+
+        <!-- ComponentMK -->
         <activity
             android:name=".componentmk.ComponentMKActivity"
             android:exported="false" />
         <activity
             android:name=".componentmk.basemk.BaseMKDemoActivity"
             android:exported="false" />
+
+        <!-- BasicsMK -->
         <activity
-            android:name=".demo.DemoActivity"
-            android:exported="false" />
-        <!--BasicsMK-->
+            android:name=".basicsmk.BasicsMKActivity"
+            android:exported="true" />
+        <activity
+            android:name=".basicsmk.databusmk.DataBusMKActivity"
+            android:exported="true" />
+        <activity
+            android:name=".basicsmk.permissionmk.PermissionMKActivity"
+            android:exported="true" />
         <activity
             android:name=".basicsmk.stackmk.StackMKActivity"
             android:exported="false" />
