--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.mozhimen.app">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
+        android:name=".MainApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -58,16 +61,19 @@
 
         <!--uicoremk-->
         <activity
-            android:name=".tabmk.TabMKBottomActivity"
+            android:name=".uicoremk.UICoreMKActivity"
             android:exported="false" />
         <activity
-            android:name=".tabmk.TabMKBottomLayoutActivity"
+            android:name=".uicoremk.tabmk.TabMKBottomActivity"
             android:exported="false" />
         <activity
-            android:name=".tabmk.TabMKBottomFragmentActivity"
+            android:name=".uicoremk.tabmk.TabMKBottomLayoutActivity"
             android:exported="false" />
         <activity
-            android:name=".tabmk.TabMKTopLayoutActivity"
+            android:name=".uicoremk.tabmk.TabMKBottomFragmentActivity"
+            android:exported="false" />
+        <activity
+            android:name=".uicoremk.tabmk.TabMKTopLayoutActivity"
             android:exported="false" />
         <activity
             android:name=".uicoremk.refreshmk.RefreshMKLayoutActivity"
@@ -82,7 +88,13 @@
             android:name=".uicoremk.btnmk.BtnMKActivity"
             android:exported="false" />
         <activity
-            android:name=".viewmk.ViewMKActivity"
+            android:name=".uicoremk.viewmk.ViewMKActivity"
+            android:exported="false" />
+        <activity
+            android:name=".uicoremk.viewmk.ViewMKStepsActivity"
+            android:exported="false" />
+        <activity
+            android:name=".uicoremk.viewmk.ViewMKViewsActivity"
             android:exported="false" />
     </application>
 
