--- a/basicsmk/build.gradle
+++ b/basicsmk/build.gradle
@@ -33,9 +33,9 @@ android {
 
 dependencies {
 
-    implementation 'androidx.core:core-ktx:1.7.0'
-    implementation 'androidx.appcompat:appcompat:1.4.1'
-    implementation 'com.google.android.material:material:1.5.0'
+    api 'androidx.core:core-ktx:1.7.0'
+    api 'androidx.appcompat:appcompat:1.4.1'
+    api 'com.google.android.material:material:1.5.0'
 
     api 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.2'
     api 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.2'
