--- a/componentmk/build.gradle
+++ b/componentmk/build.gradle
@@ -30,9 +30,8 @@ android {
 
 dependencies {
 
-    implementation 'androidx.core:core-ktx:1.7.0'
-    implementation 'androidx.appcompat:appcompat:1.4.1'
-    implementation 'com.google.android.material:material:1.5.0'
     api 'androidx.databinding:databinding-runtime:7.1.2'
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.5.0-alpha03'
+
+    implementation project(path: ':basicsmk')
 }
