--- a/componentmk/build.gradle
+++ b/componentmk/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.library'
     id 'kotlin-android'
+    id 'kotlin-kapt'
 }
 
 android {
@@ -30,6 +31,14 @@ android {
 
 dependencies {
 
+    //navigationmk
+    implementation 'com.alibaba:fastjson:1.2.68'
+    api 'androidx.navigation:navigation-fragment-ktx:2.4.1'
+    api 'androidx.navigation:navigation-ui-ktx:2.4.1'
+    api project(path: ':navigationmkannor')
+    kapt project(path: ':navigationmkcompiler')
+
+    //basemk
     api 'androidx.databinding:databinding-runtime:7.1.2'
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.5.0-alpha03'
 
