--- a/abilitymk/build.gradle
+++ b/abilitymk/build.gradle
@@ -55,4 +55,5 @@ dependencies {
     //restfulmk
     api 'com.squareup.retrofit2:retrofit:2.9.0'//retrofit
     api 'com.squareup.retrofit2:converter-gson:2.9.0'
+    api 'com.squareup.okhttp3:okhttp:5.0.0-alpha.2'
 }
