--- a/basicsmk/build.gradle
+++ b/basicsmk/build.gradle
@@ -32,7 +32,7 @@ android {
 }
 
 dependencies {
-
+    api "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     api 'androidx.core:core-ktx:1.7.0'
     api 'androidx.appcompat:appcompat:1.4.1'
     api 'com.google.android.material:material:1.5.0'
