--- a/basick/src/main/AndroidManifest.xml
+++ b/basick/src/main/AndroidManifest.xml
@@ -6,6 +6,11 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <!--UtilKNet-->
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <!--UtilKDevice-->
+    <uses-permission
+        android:name="android.permission.READ_PRIVILEGED_PHONE_STATE"
+        tools:ignore="ProtectedPermissions" />
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
     <!--UtilKVibrate-->
     <uses-permission android:name="android.permission.VIBRATE" />
     <!--CrashK-->
@@ -15,4 +20,9 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <!--FpsK-->
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
+    <!--UtilKDevice-->
+    <uses-permission android:name="android.permission.CAMERA" />
+
+    <uses-feature android:name="android.hardware.camera" />
+    <uses-feature android:name="android.hardware.camera.autofocus" />
 </manifest>
