--- a/underlayk/build.gradle
+++ b/underlayk/build.gradle
@@ -42,9 +42,7 @@ android {
 dependencies {
     implementation project(path: ':basick')
     implementation project(path: ':uicorek')
-    implementation 'androidx.appcompat:appcompat:1.3.0'
-    implementation 'com.google.android.material:material:1.4.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
+    implementation project(path: ':componentk')
 }
 
 static def buildTime() {
