--- a/underlayk/src/main/AndroidManifest.xml
+++ b/underlayk/src/main/AndroidManifest.xml
@@ -1,13 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.mozhimen.underlayk">
+    package="com.mozhimen.underlayk" >
 
     <application>
         <activity
-            android:name=".debugk.DebugKLogKActivity"
+            android:name=".debugk.uis.DebugKParamsActivity"
             android:exported="false" />
         <activity
-            android:name=".debugk.DebugKCrashKActivity"
+            android:name=".debugk.uis.DebugKLogKActivity"
+            android:exported="false" />
+        <activity
+            android:name=".debugk.uis.DebugKCrashKActivity"
             android:exported="false" />
     </application>
 
