--- a/abilityk/src/main/AndroidManifest.xml
+++ b/abilityk/src/main/AndroidManifest.xml
@@ -8,6 +8,14 @@
     <uses-feature android:name="android.hardware.camera" />
     <uses-feature android:name="android.hardware.camera.autofocus" />
 
+
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
+    <queries>
+        <intent>
+            <action android:name="android.intent.action.TTS_SERVICE" />
+        </intent>
+    </queries>
+
     <application>
         <activity
             android:name=".scank.ScanKQRActivity2"
