--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,9 @@ dependencies {
     implementation project(path: ':basick')
     implementation project(path: ':uicorek')
     implementation project(path: ':abilityk')
-    debugImplementation project(path: ':underlayk')
+    implementation project(path: ':underlayk')
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
+    implementation 'androidx.appcompat:appcompat:1.3.0'
+    implementation 'com.google.android.material:material:1.4.0'
     //kapt project(path: ':guidek_compiler')
 }
