--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:theme="@style/Theme.SwiftK"
         android:usesCleartextTraffic="true">
 
-         <!-- provider -->
+        <!-- provider -->
         <provider
             android:name="androidx.core.content.FileProvider"
             android:authorities="${applicationId}.fileProvider"
@@ -133,6 +133,9 @@
         <activity
             android:name=".uicorek.dialogk.DialogKActivity"
             android:exported="false" /> <!-- abilityk -->
+        <activity
+            android:name=".abilityk.opencvk.OpenCVKMatchActivity"
+            android:exported="false" />
         <activity
             android:name=".abilityk.scank.ScanKHSVActivity"
             android:exported="false" />
