--- a/underlayk/build.gradle
+++ b/underlayk/build.gradle
@@ -18,6 +18,9 @@ android {
 
     buildTypes {
         release {
+            buildConfigField("String", "BUILD_TIME", "\"" + buildTime() + "\"")
+            buildConfigField "String", "VERSION_NAME", "\"" + rootProject.ext.android.versionName + "\""
+            buildConfigField "int", "VERSION_CODE", "" + rootProject.ext.android.versionCode
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
