--- a/basick/build.gradle
+++ b/basick/build.gradle
@@ -54,4 +54,7 @@ dependencies {
     //cachek
     implementation 'androidx.room:room-runtime:2.4.2'
     kapt 'androidx.room:room-compiler:2.4.2'
+
+    //test
+    testApi 'junit:junit:4.13.2'
 }
