--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,9 +14,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.SwiftK"
         android:usesCleartextTraffic="true">
-        <activity
-            android:name=".basick.utilk.UtilKGestureActivity"
-            android:exported="false" />
+
         <!-- provider -->
         <provider
             android:name="androidx.core.content.FileProvider"
@@ -36,10 +34,14 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity> <!-- demo -->
+        </activity>
+
+        <!-- demo -->
         <activity
             android:name=".demo.DemoActivity"
-            android:exported="false" /> <!-- componentk -->
+            android:exported="false" />
+
+        <!-- componentk -->
         <activity
             android:name=".componentk.ComponentKActivity"
             android:exported="false" />
@@ -51,7 +53,12 @@
             android:exported="true" />
         <activity
             android:name=".componentk.statusbark.StatusBarKActivity"
-            android:exported="false" /> <!-- basicsk -->
+            android:exported="false" />
+
+        <!-- basicsk -->
+        <activity
+            android:name=".basick.utilk.UtilKGestureActivity"
+            android:exported="false" />
         <activity
             android:name=".basick.eventk.EventKActivity"
             android:exported="true" />
@@ -72,7 +79,12 @@
             android:exported="false" />
         <activity
             android:name=".basick.stackk.StackKActivity"
-            android:exported="false" /> <!-- uicorek -->
+            android:exported="false" />
+
+        <!-- uicorek -->
+        <activity
+            android:name=".uicorek.textk.TextKActivity"
+            android:exported="false" />
         <activity
             android:name=".uicorek.layoutk.LayoutKVideoActivity"
             android:exported="false" />
@@ -138,7 +150,9 @@
             android:exported="false" />
         <activity
             android:name=".uicorek.dialogk.DialogKActivity"
-            android:exported="false" /> <!-- abilityk -->
+            android:exported="false" />
+
+        <!-- abilityk -->
         <activity
             android:name=".abilityk.opencvk.OpenCVKMatchActivity"
             android:exported="false" />
@@ -171,7 +185,9 @@
             android:exported="false" />
         <activity
             android:name=".abilityk.netk.NetKActivity"
-            android:exported="false" /> <!-- underlayk -->
+            android:exported="false" />
+
+        <!-- underlayk -->
         <activity
             android:name=".underlayk.debugk.DebugKActivity"
             android:exported="false" />
