--- a/settings.gradle
+++ b/settings.gradle
@@ -1,3 +1,13 @@
+dependencyResolutionManagement {
+    repositoriesMode.set(RepositoriesMode.FAIL_ON_PROJECT_REPOS)
+    repositories {
+        maven { url 'https://maven.aliyun.com/repository/central' }
+        maven { url 'https://maven.aliyun.com/repository/google' }
+        maven { url 'https://www.jitpack.io' }
+        maven { url 'https://developer.huawei.com/repo/' }//for scank
+    }
+}
+
 include ':app'
 rootProject.name = "SwiftKit"
 include ':basick'
