--- a/basick/src/main/AndroidManifest.xml
+++ b/basick/src/main/AndroidManifest.xml
@@ -7,6 +7,7 @@
     <!--UtilKNet-->
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <!--UtilKDevice-->
+    <uses-permission android:name="android.permission.KILL_BACKGROUND_PROCESSES" />
     <uses-permission
         android:name="android.permission.READ_PRIVILEGED_PHONE_STATE"
         tools:ignore="ProtectedPermissions" />
