--- a/uicorek/build.gradle
+++ b/uicorek/build.gradle
@@ -29,13 +29,13 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
-    buildFeatures{
+    buildFeatures {
         dataBinding true
     }
 }
 
 dependencies {
-    implementation project(path: ':basick')
-    api 'androidx.constraintlayout:constraintlayout:2.1.3'
+    implementation project(project.path.replace(project.name, '') + ':basick')
+    api 'androidx.constraintlayout:constraintlayout:2.1.4'
     api "com.airbnb.android:lottie:3.6.1"
 }
