--- a/underlayk/src/main/AndroidManifest.xml
+++ b/underlayk/src/main/AndroidManifest.xml
@@ -1,4 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest package="com.mozhimen.underlayk">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    package="com.mozhimen.underlayk">
 
+    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
 </manifest>
