--- a/componentktest/build.gradle
+++ b/componentktest/build.gradle
@@ -39,5 +39,8 @@ dependencies {
     implementation project(path: ':componentk')
     implementation project(path: ':uicorek')
     implementation project(path: ':debugk')
+    implementation 'androidx.appcompat:appcompat:1.3.0'
+    implementation 'com.google.android.material:material:1.4.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     //kapt project(path: ':guidek_compiler')
 }
