--- a/build.gradle
+++ b/build.gradle
@@ -6,10 +6,11 @@ buildscript {
         maven { url 'https://maven.aliyun.com/repository/central' }
         maven { url 'https://maven.aliyun.com/repository/google' }
         maven { url 'https://developer.huawei.com/repo/' }//for scank
+        google()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:7.0.3'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.7.10"
         classpath 'com.huawei.agconnect:agcp:1.6.5.300'//for scank
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
