--- a/componentk/build.gradle
+++ b/componentk/build.gradle
@@ -48,6 +48,10 @@ dependencies {
     implementation 'androidx.camera:camera-view:1.1.0-beta02'
     api 'androidx.camera:camera-core:1.1.0-beta02'
 
+    //navigatek
+    api 'androidx.navigation:navigation-fragment-ktx:2.4.1'
+    api 'androidx.navigation:navigation-ui-ktx:2.4.1'
+
     implementation project(project.path.replace(project.name, '') +  ':basick')
     implementation project(project.path.replace(project.name, '') +  ':uicorek')
     implementation project(project.path.replace(project.name, '') +  ':underlayk')
