--- a/settings.gradle
+++ b/settings.gradle
@@ -5,6 +5,8 @@ dependencyResolutionManagement {
         maven { url 'https://maven.aliyun.com/repository/google' }
         maven { url 'https://www.jitpack.io' }
         maven { url 'https://developer.huawei.com/repo/' }//for scank
+        google()
+        mavenCentral()
     }
 }
 
