--- a/componentktest/build.gradle
+++ b/componentktest/build.gradle
@@ -39,7 +39,6 @@ dependencies {
     implementation project(path: ':componentk')
     implementation project(path: ':uicorek')
     implementation project(path: ':debugk')
-    implementation 'androidx.appcompat:appcompat:1.5.1'
-    implementation 'com.google.android.material:material:1.4.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+
+    testImplementation 'junit:junit:4.13.2'
 }
