--- a/componentktest/src/main/AndroidManifest.xml
+++ b/componentktest/src/main/AndroidManifest.xml
@@ -10,9 +10,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.SwiftKit"
         android:usesCleartextTraffic="true">
-        <activity
-            android:name=".NavigateKActivity"
-            android:exported="false" />
+
         <activity
             android:name="com.mozhimen.componentktest.ComponentKActivity"
             android:exported="true">
@@ -22,6 +20,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name="com.mozhimen.componentktest.navigatek.NavigateKActivity"
+            android:exported="false" />
         <activity
             android:name="com.mozhimen.componentktest.animk.AnimKActivity"
             android:exported="false" />
