--- a/basicktest/build.gradle
+++ b/basicktest/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.application'
-    id 'org.jetbrains.kotlin.android'
+    id 'kotlin-android'
+    id 'kotlin-kapt'
 }
 
 android {
@@ -37,5 +38,6 @@ android {
 dependencies {
     implementation project(path: ':basick')
     implementation project(path: ':debugk')
+    implementation project(path: ':componentk')
     implementation project(path: ':uicorek')
 }
