--- a/basicktest/build.gradle
+++ b/basicktest/build.gradle
@@ -8,7 +8,7 @@ android {
     compileSdkVersion rootProject.android.compileSdk
 
     defaultConfig {
-        applicationId rootProject.ext.android.applicationId
+        applicationId "com.mozhimen.basicktest"
         minSdk rootProject.ext.android.minSdk
         targetSdk rootProject.ext.android.targetSdk
         versionCode rootProject.ext.android.versionCode
@@ -40,4 +40,7 @@ dependencies {
     implementation project(path: ':debugk')
     implementation project(path: ':componentk')
     implementation project(path: ':uicorek')
+    implementation 'androidx.appcompat:appcompat:1.4.1'
+    implementation 'com.google.android.material:material:1.5.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
 }
